# tkust_stats_web

./: .gitignore  Makefile  pyproject.toml  pyproject.toml 
backend/: .gitignore  Dockerfile  docker-compose.yml  render.yaml  requirements.txt  run.py  test.py
backend/api/: __init__.py  routes.py
backend/app/: __init__.py  auth_utils.py  config.py  extensions.py
backend/app/api/: __init__.py  auth_routes.py  leaderboard_routes.py  match_routes.py  member_routes.py  organization_routes.py  profile_routes.py  routes.py
backend/app/commands/: __init__.py  init_admin.py  init_users.py  rating_commands.py  seed.py
backend/app/models/: MatchRecord.py  PlayerStats.py  TeamEvent.py  TeamMember.py  __init__.py  enums.py  match.py  match_record.py  member.py  organization.py  player_stats.py  racket.py  team_event.py  team_member.py  user.py
backend/app/schemas/: auth_schemas.py  leaderboard_schemas.py  match_schemas.py  member_schemas.py  organization_schemas.py  profile_schemas.py
backend/app/services/: auth_service.py  leaderboard_service.py  match_analytics_service.py  match_service.py  member_service.py  organization_service.py  profile_service.py  rating_service.py
backend/app/tools/: auth_utils.py  exceptions.py  validators.py
backend/migrations/versions/: 09c786489507_make_user_email_nullable.py  113e5c05f5ca_update_detail_match_socre.py  22e266f04f94_add_total_points_duration_youtube_url_.py  (+17 more)
frontend/: .prettierignore  .prettierrc  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
(+46 files in other folders)
