[tool.black]
line-length = 120
target-version = ['py312']
skip-string-normalization = false

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[project]
name = "tku-soft-tennis-web"
version = "1.1.0"